# AI

./: README.md  SOM.java  SOM.txt
ExpertSystem/: polynesian_navigation.pl
GeneticAlgorithm/: README.md  package-lock.json  package.json  snowpack.config.mjs
GeneticAlgorithm/public/: index.html
GeneticAlgorithm/src/: Shapes.ts  Specimen.ts  index.ts
NeuralNetwork/: CMakeLists.txt  main.cpp  predictData.csv  redXor.txt  savedWineNN.txt  trainData.csv
NeuralNetwork/src/: Matrix.cpp  Matrix.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Parser.hpp
